[tool.poetry]
name = "gql-standalone"
version = "0.1.0"
description = "Alima's Standalone GraphQL API"
authors = ["jorgeviz", "ferreyyes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = "^0.170.0"
uvicorn = "^0.21.1"
starlette = "^0.26.1"
sqlalchemy = "~1.4.42"
databases = "0.7.0"
firebase-admin = "6.1.0"
motor = "^3.1.2"
openpyxl = "^3.1.2"
pandas = "^2.0.1"
python-multipart = "^0.0.6"
bs4 = "^0.0.1"
lxml = "^4.9.2"
cloudinary = "^1.33.0"
algoliasearch = "^3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tqdm = "^4.66.1"
xlsxwriter = "^3.1.9"
fuzzywuzzy = "^0.18.0"
boto3 = "1.26.106"
stripe = "5.4.0"
sendgrid = "6.10.0"
asyncpg = "0.27.0"
psycopg2-binary = "2.9.6"
resend = "2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
autopep8 = "^2.0.2"
pytest-env = "^0.8.1"
tqdm = "^4.66.1"
flake8 = "6.0.0"


[tool.poetry.group.dev-linux.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
api-server = "gqlapi.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
